Current version (1.6-trunk):
  - New "Add 3 channels" button wizard on Site (multiple channels creation)
  - An equipment have a default configuration that comes from its model. If you create a channel that uses this equipment, it takes first its default equipment configuration then its equipment's model configuration
  - Fix: Default equipment on Intervention is not set. It uses now those from which you come.
  - Fix: Station map title was "Django administration". Now current application version
  - API new field on Site: 'status'
  - Admin interface is the main one. Forget '/gissmo' in URL
  - Docker entrypoint checks now postgreSQL variables
  - Rename postgreSQL variable names in Django
  - Dockerfile use now Alpine 3.4

Version 1.5.2:
  - Fix about Organism deletion
  - Change Dockerfile upload directory variable and permissions
  - Fix HTTPS problem with google map

Version 1.5.1:
  - Migrate Dockerfile from python:3.4 image to alpine:edge one. This reduce container size from 744 MB to 144 MB

Version 1.5:
  - Add a new documentation called "how to access Gissmo API v1 with Python"
  - Add a link from StationSite to Ground Type
  - Create Ground Type which is an EC8 soil classification
  - Move "Geology formation" (in StationSite) from "Main information" to "Other information"
  - An intervention needs at least 1 operator
  - Current user is now the default one for Intervention (bug fixed)
  - Actor review:
    - split Actor into User and Organism
    - migrate Group to Projects
    - split IntervActor to IntervUser and IntervOrganism
  - Upload directory is now available as volume for Docker containers
  - Intervention attachment is now available (documents on it)
  - New 'close channels' button on a given StationSite to give a closing date
  - Equipment List - 2 new filters appears: Status and last station
  - Display current Gissmo version on site header
  - Change application to be not translatable and only in English