@@ -1,4 +1,5 @@
 Current version (1.6-trunk):
+  - Each station have a "Google Map View" link to display it on Google Map
   - New "Add 3 channels" button wizard on Site (multiple channels creation)
   - An equipment have a default configuration that comes from its model. If you create a channel that uses this equipment, it takes first its default equipment configuration then its equipment's model configuration
   - Fix: Default equipment on Intervention is not set. It uses now those from which you come.
